Fixed the alignment issue on file-rekognition-view

--- a/angular-video-crime-miner/src/app/file-rekognition-view/file-rekognition-view.component.scss
+++ b/angular-video-crime-miner/src/app/file-rekognition-view/file-rekognition-view.component.scss
@@ -52,28 +52,31 @@ h1{
 }
 
 .fixedBox1{
-  height: 120px;
+  height: 50%;
   border: 1px;
 }
+.pageFormat{
+  width: 100%;
+  height: 100%;
+}
 .videoplayer{
-  height: 700px;
-  border: 1px;
-  width:1300px;
-  border: 10px solid;
+  height: 70%;
+  border: 5px;
+  width: 70%;
+  float: left;
+  padding: 20px;
   border-image-source: linear-gradient(45deg, #387c37, rgb(255, 255, 255), rgb(169, 0, 34));
   border-image-slice: 1;
 }
 .scrollbox{
-  float: right;
-  width: 350px;
-  height: 900px;
-  overflow:auto;
-}
-.pageFormat{
-  width: 450px;
+  float: left;
+  width: 30%;
+  height: 80%;
+  padding: 20px;
+  overflow:scroll;
 }
 .floatstyle{
-  float: left;
-  width: 300px;
+  padding: 20px;
+  width: 50%;
 }
 
